# get_papers_project

./: README.md
get_papers_project/: README.md.txt  covid.csv  diabetes.csv  pyproject.toml  result.csv
get_papers_project/get_papers/: core.py
get_papers_project/scripts/: get_papers_list.py
